# webcrawler

./: .gitignore  README.md  applicator.py  builder.py  cleaner.py  commander-copy.py  commander.py  commandmods.py  converter.py  crawler.py  documenter.py  downloader.py  extender.py  extractor.py  felow.py  finder.py  formatter.py  functions.py  functions.txt  generator.py  html  indexer.py  mediator.py  modeler.py  models.py  modulator.py  new_file.txt  notes.md  pyproject.toml  scraper.py  splitter.py  stripper.py  test.py
src/: duplicatewords.txt
src/felo/: __main__.py  commands.py  felo.py  functions.py  settings.py
src/felo/editor/: applicator.py  formatter.py
src/felo/junk/: old_functions.py
src/felo/office/: editor.py  reader.py  writer.py
src/felo/rnn/: builder.py  generator.py
src/felo/web/: crawler.py  indexer.py  scraper.py
test/: clean.txt  db1.json  duplicatewords.txt  extract.txt  format.txt  gentext.txt  mydoc.txt  newdoc.docx  test.json  test.py  testdoc.docx  textgenrnn_weights.hdf5
test/Backupweights1/: weights.hdf5
test/weights1/: vocab.json
tests/: db.json  db2.json  index.json  index2.json  myedits.txt  myedits2.txt  test.txt
