[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "felo"
version = "0.0.1"
authors = [
  { name="n0xs1", email="n0xs1@protonmail.com" },
]
description = "A File Evaluator and Logical Operator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/lux3hs/felow"
